--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,6 @@
 ---
 functional:
-  - Пользователь должен иметь возможность создать игру
-  - Пользователь должен иметь возможность выбрать свой уровень
+  - Пользователь должен иметь возможность создать игру и выбрать подходящий ему уровень
   - Пользователь должен иметь возможность выбрать тип игры (с ботом, с другом, с другими пользователями)
   - Пользователь должен иметь возможность выбрать время игры
   - Пользователь должен иметь возможность выбрать задание
