--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,18 +1,130 @@
 ---
 - summary: |
-    Проверка функции создания игры
+    Проверка возможности зарегистрироваться на сайте
   requirement: |
-    Тестируемое требование. Например: При верном вводе логине и пароля пользователь должен войти в систему
-    При нажании на кнопку "Create a game" пользователь доожен иметь увидеьб модальное окно
+    Пользователь должен иметь возможность зарегистрироваться на сайте
   prerequisites: |
-    Это условия, которые необходимы для проведения тест-кейса. Они должны быть выполнены еще до запуска тест-кейса.
-    Например: открыта страница логина
+    Открыта главная страница: https://codebattle.hexlet.io/
   test-data: |
-    Тестовые данные
-    Логин = ilona Пароль = password
+    Логин - SonyaWW
+    Пароль - password  
+    e-mail - Sonya.WW@gmail.com
   steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку «Войти»
+    - На главной странице Нажимаем кнопку "Зарегистрироваться"
+    - Заполняем поле Логин
+    - Заполняем поле e-mail
+    - Заполняем поле Пароль
+    - Подтверждаем в поле пароль - Пароль
+    - Кликаем "зарегистрироваться"
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Пользователь должен попасть в Личный кабинет
+
+- summary: |
+    Проверка функции создания своей игры
+  requirement: |
+    При нажании на кнопку "Create a game" пользователь должен иметь увидеть модальное окно
+  prerequisites: |
+    Пользователь находится на главной странице сайта
+  test-data: |
+    no data
+  steps:
+    - Нажимаем кнопку "Create a game"
+  expected-result: |
+    Пользователь должен увидеть модальное окно с выбором функций для создания игры
+
+- summary: |
+    Проверка выбора функции уровень игры
+  requirement: |
+    Пользователь должен иметь возможность выбрать свой уровень игры которую он создаёт
+  prerequisites: |
+    Пользователь находится на главной странице сайта
+  test-data: |
+    no data
+  steps:
+    - Кликаем кнопку "Create a game" 
+    - В модальном окне появляется варианты выбора уровней (4 уровня)
+    - Выбираем нужный нам уровень
+  expected-result: |
+    Пользователь имеет возможность выбрать уровень
+
+- summary: |
+    Проверка создание игры с разными типами игры (игра с ботом, с другом, с другими пользователями)
+  requirement: |
+    Пользователь должен иметь возможность выбрать тип игры с ботом
+  prerequisites: |
+    Пользователь находится на главной странице сайта
+  test-data: |
+    no data
+  steps:
+    - Кликаем кнопку "Create a game"
+    - В категории "Game Type" выбираем пользователя игра с ботом
+  expected-result: |
+    Пользователь имеет возможность ввыбрать себе соперника
+
+- summary: |
+    Проверка регулирования времени при создании игры
+  requirement: |
+    Пользователь должен иметь возможность выбрать время игры
+  prerequisites: |
+    Пользователь находится на главной странице сайта
+  test-data: |
+    no data
+  steps:
+    - Нажимаем кнопку "Create a game"
+    - В модальном окне в поле "Контроль времени" тянем бегунок и выставляем подходящее вренмя для прохождения игры
+  expected-result: |
+    Пользователь имеет возможность выбрать подходящее ему время для решения задачи в игре
+
+- summary: |
+    Проверка возможности выбора задания
+  requirement: |
+    Пользователь должен иметь возможность выбрать задание
+  prerequisites: |
+    Пользователь находится на главной странице сайта
+  test-data: |
+    no data
+  steps:
+    - Кликаем кнопку "Create a game"
+    - В модальном окне в поле "Выберите задачу по названию или тегам" выбираем "rect_area"
+  expected-result: |
+    Пользователь может выбрать нужную ему категорию в игре
+
+- summary: |
+    Проверка возможности писать код в игре
+  requirement: |
+    Пользователь должен иметь возможность писать код в терминале
+  prerequisites: |
+    Пользователь находится на странице игры
+  test-data: |
+    no data
+  steps:
+    - В терминале пишем код (width*length)
+  expected-result: |
+    Пользователь может писать
+
+- summary: |
+    Проверка возможности проверить свой код
+  requirement: |
+    Пользователь должен иметь возможность проверить свой код
+  prerequisites: |
+    Пользователь находится на странице игры
+  test-data: |
+    no data
+  steps:
+    - В терминале пишем код "return width*length"
+    - Нажимаем кнопку "проверить решение"
+  expected-result: |
+    Пользователь может проверить свое решение
+
+- summary: |
+    Проверка возможности видеть таблицу лидеров
+  requirement: |
+    Пользователь должен иметь возможность видеть таблицу лидеров
+  prerequisites: |
+    Пользователь находится на главной странице сайта
+  test-data: |
+    no data
+  steps:
+    - Войти на сайт через "Github"
+  expected-result: |
+    Пользователь видит "Таблицу лидеров"
