--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
 functional:
   - Пользователь должен иметь возможность зарегистрироваться на сайте
-  - Пользователь должен иметь возможность создать игру и 
+  - Пользователь должен иметь возможность создавать игру
   - Пользователь должен иметь возможность выбрать подходящий ему уровень
   - Пользователь должен иметь возможность выбрать тип игры (с ботом, с другом, с другими пользователями)
   - Пользователь должен иметь возможность выбрать время игры
