--- a/requirements.yml
+++ b/requirements.yml
@@ -5,7 +5,7 @@ functional:
   - Пользователь должен иметь возможность выбрать подходящий ему уровень
   - Пользователь должен иметь возможность выбрать тип игры (с ботом, с другом, с другими пользователями)
   - Пользователь должен иметь возможность выбрать время игры
-  - Пользователь должен иметь возможность выбрать задание
+  - Пользователь должен иметь возможность выбрать категорию задания
   - Пользователь должен иметь возможность писать код
   - Пользователь должен иметь возможность проверить свой код
 non-functional:
