--- a/requirements.yml
+++ b/requirements.yml
@@ -6,8 +6,7 @@ functional:
   - Пользователь должен иметь возможность выбрать тип игры (с ботом, с другом, с другими пользователями)
   - Пользователь должен иметь возможность выбрать время игры
   - Пользователь должен иметь возможность выбрать категорию задания
-  - Пользователь должен иметь возможность писать код
-  - Пользователь должен иметь возможность проверить свой код
+  - Пользователь должен иметь возможность проверить свой код (верно написаный код и неверно написанный код)
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
