--- a/test-cases.yml
+++ b/test-cases.yml
@@ -20,11 +20,12 @@
     Пользователь должен попасть в Личный кабинет
 
 - summary: |
-    Проверка функции создания своей игры
+    Проверка функции создания игры
   requirement: |
     При нажании на кнопку "Create a game" пользователь должен иметь увидеть модальное окно
   prerequisites: |
-    Пользователь находится на главной странице сайта
+    Пользователь находится на главной странице сайта: https://codebattle.hexlet.io/
+    Пользователь авторизован
   test-data: |
     no data
   steps:
@@ -37,27 +38,64 @@
   requirement: |
     Пользователь должен иметь возможность выбрать свой уровень игры которую он создаёт
   prerequisites: |
-    Пользователь находится на главной странице сайта
+    Пользователь находится на главной странице сайта:  https://codebattle.hexlet.io/
+    Пользователь авторизован
   test-data: |
     no data
   steps:
     - Кликаем кнопку "Create a game" 
     - В модальном окне появляется варианты выбора уровней (4 уровня)
-    - Выбираем нужный нам уровень
+    - Выбираем уровень
   expected-result: |
     Пользователь имеет возможность выбрать уровень
 
 - summary: |
-    Проверка создание игры с разными типами игры (игра с ботом, с другом, с другими пользователями)
+      Проверка создания игры между двумя пользователями
+    requirement: |
+      Пользователь может создать сражение с другим пользователем
+    prerequisites: 
+      Пользователь авторизован
+    test-data: |
+      Соперник = любой пользователь онлайн
+    steps:
+      - Нажать "Create game"
+      - В поле "Choose opponent" выбрать соперника
+      - Нажать "Сreate invite"
+    expected-result: |
+      Сражение запускается после подтверждения соперника
+
+- summary: |
+    Проверка создания игры с другом
+  requirement: |
+    Пользователь должен иметь возможность выбрать тип игры с другом
+  prerequisites: |
+    Пользователь находится на главной странице сайта:  https://codebattle.hexlet.io/
+    Пользователь авторизован 
+  test-data: |
+    no data
+  steps:
+    - Кликаем кнопку "Создать игру"
+    - В открывающемся окне появляется варианты выбора 4 Уровня
+    - Кликаем 1 Уровень
+    - Кликаем в поле "Тип игры" кнопку "с другом"
+    - Выбираем из выпадающего списка соперника
+    - Кликаем "Создать приглашение"
+  expected-result: |
+    Пользователь попадает на главную страницу с приглашением для выбранного соперника.
+
+- summary: |
+    Проверка создания игры с ботом
   requirement: |
     Пользователь должен иметь возможность выбрать тип игры с ботом
   prerequisites: |
-    Пользователь находится на главной странице сайта
+    Пользователь находится на главной странице сайта:  https://codebattle.hexlet.io/
+    Пользователь авторизован 
   test-data: |
     no data
   steps:
     - Кликаем кнопку "Create a game"
     - В категории "Game Type" выбираем пользователя игра с ботом
+    - Нажать "Сreate invite"
   expected-result: |
     Пользователь имеет возможность ввыбрать себе соперника
 
@@ -66,7 +104,8 @@
   requirement: |
     Пользователь должен иметь возможность выбрать время игры
   prerequisites: |
-    Пользователь находится на главной странице сайта
+    Пользователь находится на главной странице сайта: https://codebattle.hexlet.io/
+    Пользователь авторизован
   test-data: |
     no data
   steps:
@@ -76,11 +115,12 @@
     Пользователь имеет возможность выбрать подходящее ему время для решения задачи в игре
 
 - summary: |
-    Проверка возможности выбора задания
+    Проверка возможности выбора категории задания
   requirement: |
-    Пользователь должен иметь возможность выбрать задание
+    Пользователь должен иметь возможность выбрать категорию задания
   prerequisites: |
-    Пользователь находится на главной странице сайта
+    Пользователь находится на главной странице сайта: https://codebattle.hexlet.io/
+    Пользователь авторизован
   test-data: |
     no data
   steps:
@@ -90,41 +130,119 @@
     Пользователь может выбрать нужную ему категорию в игре
 
 - summary: |
-    Проверка возможности писать код в игре
-  requirement: |
-    Пользователь должен иметь возможность писать код в терминале
-  prerequisites: |
-    Пользователь находится на странице игры
-  test-data: |
-    no data
-  steps:
-    - В терминале пишем код (width*length)
-  expected-result: |
-    Пользователь может писать
-
-- summary: |
-    Проверка возможности проверить свой код
+    Проверка возможности проверить игру при неверном решении задачи
   requirement: |
     Пользователь должен иметь возможность проверить свой код
   prerequisites: |
-    Пользователь находится на странице игры
+    Пользователь находится на странице игры: https://codebattle.hexlet.io/games/142449
+    Пользователь авторизован
   test-data: |
     no data
   steps:
-    - В терминале пишем код "return width*length"
-    - Нажимаем кнопку "проверить решение"
+    - Кликаем кнопку "Создать игру"
+    - В открывающемся окне в поле выбираем Уровень 1
+    - Выбираем тип игры с ботом
+    - Выбираем задачу rect_area
+    - Кликаем "Создать битву"
+    - В поле пишем код #"const _ = require("lodash");"
+    - Кликаем "проверить решение"
   expected-result: |
-    Пользователь может проверить свое решение
+    Пользователь видит сообщение "Решение неверно"
+
+- summary: |
+    Проверка возможности проверить игру при верном решении задачи
+  requirement: |
+    Пользователь должен иметь возможность проверить свой код
+  prerequisites: |
+    Пользователь находится на странице игры: https://codebattle.hexlet.io/games/142449
+    Пользователь авторизован
+  test-data: |
+    no data
+  steps:
+    - Кликаем кнопку "Создать игру"
+    - В открывающемся окне в поле выбираем Уровень 1
+    - Выбираем тип игры с ботом
+    - Выбираем задачу "rect_area"
+    - Кликаем "Создать битву"
+    - В поле пишем код 
+    #const _ = require("lodash");
+    #const R = require("rambda");
+
+    #const solution = (width, length) => {
+    #return width * length;
+    #};
+    #module.exports = solution;"
+    - Кликаем "проверить решение"
+  expected-result: |
+    Пользователь видит сообщение "Решение верно"
+
+- summary: |
+    Проверка возможности завершить игру - сдаться
+  requirement: |
+    Пользователь должен иметь возможность проверить свой код
+  prerequisites: |
+    Пользователь находится на странице игры: https://codebattle.hexlet.io/games/142449
+    Пользователь авторизован
+  test-data: |
+    no data 
+  steps:
+    - Кликаем кнопку "Создать игру"
+    - В открывающемся окне в поле выбираем Уровень 1
+    - Выбираем тип игры с ботом
+    - Выбираем задачу "rect_area"
+    - Кликаем "Создать битву"
+    - Кликаем кнопку "сдаться"
+  expected-result: |
+    Пользователь видит сообщение "Ты проиграл"
 
 - summary: |
     Проверка возможности видеть таблицу лидеров
   requirement: |
     Пользователь должен иметь возможность видеть таблицу лидеров
   prerequisites: |
-    Пользователь находится на главной странице сайта
+    Пользователь находится на главной странице сайта: https://codebattle.hexlet.io/
+    Пользователь авторизован через "Github"
   test-data: |
     no data
   steps:
-    - Войти на сайт через "Github"
+    no data
   expected-result: |
     Пользователь видит "Таблицу лидеров"
+
+- summary: |
+      Проверка на наличие мобильной версии сайта
+    requirement: |
+      Сайт должен иметь мобильную версию 
+    prerequisites: |
+      Открыт сайт https://codebattle.hexlet.io/ 
+      Открыт DevTools
+    test-data: |
+      Девайсы для проверки =  Iphone 12, Ipad Pro, Samsug Galaxy S9+
+    steps:
+      - Выбрать девайс
+      - Проскроллить страницу вниз
+      - Нажать "Create a game"
+      - Нажать "With a bot"
+      - Нажать "Create battle"
+    expected-result: |
+      На экран выводится корректно сверстанный сайт, функциональность основных кнопок работает
+
+- summary: |
+      Проверка открытия сайта в разных браузерах 
+    requirement: |
+      Сайт должен быть совместим с последней версией браузера
+    prerequisites: 
+      Открыт сайт https://codebattle.hexlet.io/
+      Авторизация в Browser Stack выполнена
+      Выбрано окружение - Mac (OS Ventura)
+    test-data: |
+      Браузеры = Safari, Opera, Chrome, Yandex, Firefox
+    steps:
+      - Нажать на последнюю версию браузера 
+      - Ввести URL приложения
+      - Нажать "ENTER"
+      - Проскроллить страницу
+      - Нажать "Sign in"
+      - Нажать "Sign in with GitHub"
+    expected-result: |
+      Сайт открывается корректно, наполнение страницы отображается корректно для пользователя сайта
