--- a/testing-report.yml
+++ b/testing-report.yml
@@ -4,7 +4,7 @@
   status: pass
 
 - summary: |
-    Проверка функции создания своей игры
+    Проверка функции создания игры
   status: pass
 
 - summary: |
@@ -12,7 +12,15 @@
   status: pass
 
 - summary: |
-    Проверка создание игры с разными типами игры (игра с ботом, с другом, с другими пользователями)
+    Проверка создания игры между двумя пользователями
+  status: pass
+
+- summary: |
+    Проверка создания игры с другом
+  status: pass
+
+- summary: |
+    Проверка создания игры с ботом
   status: pass
 
 - summary: |
@@ -20,17 +28,29 @@
   status: pass
   
 - summary: |
-    Проверка возможности выбора задания
+    Проверка возможности выбора категории задания
   status: pass
 
 - summary: |
-    Проверка возможности писать код в игре
+    Проверка возможности проверить игру при неверном решении задачи
   status: pass
   
 - summary: |
-   Проверка возможности проверить свой код
+    Проверка возможности проверить игру при верном решении задачи
   status: pass  
-  
+
 - summary: |
-    Проверка возможности видеть таблицу лидеров.
+    Проверка возможности завершить игру - сдаться
+  status: pass 
+
+- summary: |
+    Проверка возможности видеть таблицу лидеров
+  status: pass
+
+- summary: |
+    Проверка на наличие мобильной версии сайта
+  status: pass
+
+- summary: |
+    Проверка открытия сайта в разных браузерах
   status: pass
