--- a/test-cases.yml
+++ b/test-cases.yml
@@ -50,19 +50,19 @@
     Пользователь имеет возможность выбрать уровень
 
 - summary: |
-      Проверка создания игры между двумя пользователями
-    requirement: |
-      Пользователь может создать сражение с другим пользователем
-    prerequisites: 
-      Пользователь авторизован
-    test-data: |
-      Соперник = любой пользователь онлайн
-    steps:
-      - Нажать "Create game"
-      - В поле "Choose opponent" выбрать соперника
-      - Нажать "Сreate invite"
-    expected-result: |
-      Сражение запускается после подтверждения соперника
+    Проверка создания игры между двумя пользователями
+  requirement: |
+    Пользователь может создать сражение с другим пользователем
+  prerequisites: 
+    Пользователь авторизован
+  test-data: |
+    Соперник = любой пользователь онлайн
+  steps:
+    - Нажать "Create game"
+    - В поле "Choose opponent" выбрать соперника
+    - Нажать "Сreate invite"
+  expected-result: |
+    Сражение запускается после подтверждения соперника
 
 - summary: |
     Проверка создания игры с другом
@@ -157,7 +157,7 @@
     Пользователь находится на странице игры: https://codebattle.hexlet.io/games/142449
     Пользователь авторизован
   test-data: |
-    no data
+    - no data
   steps:
     - Кликаем кнопку "Создать игру"
     - В открывающемся окне в поле выбираем Уровень 1
@@ -205,44 +205,44 @@
   test-data: |
     no data
   steps:
-    no data
+    - no data
   expected-result: |
     Пользователь видит "Таблицу лидеров"
 
 - summary: |
-      Проверка на наличие мобильной версии сайта
-    requirement: |
-      Сайт должен иметь мобильную версию 
-    prerequisites: |
-      Открыт сайт https://codebattle.hexlet.io/ 
-      Открыт DevTools
-    test-data: |
-      Девайсы для проверки =  Iphone 12, Ipad Pro, Samsug Galaxy S9+
-    steps:
-      - Выбрать девайс
-      - Проскроллить страницу вниз
-      - Нажать "Create a game"
-      - Нажать "With a bot"
-      - Нажать "Create battle"
-    expected-result: |
-      На экран выводится корректно сверстанный сайт, функциональность основных кнопок работает
+    Проверка на наличие мобильной версии сайта
+  requirement: |
+    Сайт должен иметь мобильную версию 
+  prerequisites: |
+    Открыт сайт https://codebattle.hexlet.io/ 
+    Открыт DevTools
+  test-data: |
+    Девайсы для проверки =  Iphone 12, Ipad Pro, Samsug Galaxy S9+
+  steps:
+    - Выбрать девайс
+    - Проскроллить страницу вниз
+    - Нажать "Create a game"
+    - Нажать "With a bot"
+    - Нажать "Create battle"
+  expected-result: |
+    На экран выводится корректно сверстанный сайт, функциональность основных кнопок работает
 
 - summary: |
-      Проверка открытия сайта в разных браузерах 
-    requirement: |
-      Сайт должен быть совместим с последней версией браузера
-    prerequisites: 
-      Открыт сайт https://codebattle.hexlet.io/
-      Авторизация в Browser Stack выполнена
-      Выбрано окружение - Mac (OS Ventura)
-    test-data: |
-      Браузеры = Safari, Opera, Chrome, Yandex, Firefox
-    steps:
-      - Нажать на последнюю версию браузера 
-      - Ввести URL приложения
-      - Нажать "ENTER"
-      - Проскроллить страницу
-      - Нажать "Sign in"
-      - Нажать "Sign in with GitHub"
-    expected-result: |
-      Сайт открывается корректно, наполнение страницы отображается корректно для пользователя сайта
+    Проверка открытия сайта в разных браузерах 
+  requirement: |
+    Сайт должен быть совместим с последней версией браузера
+  prerequisites: 
+    Открыт сайт https://codebattle.hexlet.io/
+    Авторизация в Browser Stack выполнена
+    Выбрано окружение - Mac (OS Ventura)
+  test-data: |
+    Браузеры = Safari, Opera, Chrome, Yandex, Firefox
+  steps:
+    - Нажать на последнюю версию браузера 
+    - Ввести URL приложения
+    - Нажать "ENTER"
+    - Проскроллить страницу
+    - Нажать "Sign in"
+    - Нажать "Sign in with GitHub"
+  expected-result: |
+    Сайт открывается корректно, наполнение страницы отображается корректно для пользователя сайта
