--- a/test-cases.yml
+++ b/test-cases.yml
@@ -97,7 +97,7 @@
     - В категории "Game Type" выбираем пользователя игра с ботом
     - Нажать "Сreate invite"
   expected-result: |
-    Пользователь имеет возможность ввыбрать себе соперника
+    Пользователь имеет возможность выбрать себе в соперники бота
 
 - summary: |
     Проверка регулирования времени при создании игры
