--- a/test-cases.yml
+++ b/test-cases.yml
@@ -59,10 +59,14 @@
     Соперник = любой пользователь онлайн
   steps:
     - Нажать "Create game"
+    - В открывающемся окне появляется варианты выбора 4 Уровня
     - В поле "Choose opponent" выбрать соперника
+    - Кликаем 1 Уровень
+    - Кликаем в поле "Тип игры" кнопку "с другими пользователями"
     - Нажать "Сreate invite"
+    - Ждем когда кто-нибудь присоединится к игре
   expected-result: |
-    Сражение запускается после подтверждения соперника
+    Сражение запускается после того как соперник принимает подтверждпет игру
 
 - summary: |
     Проверка создания игры с другом
