--- a/testing-report.yml
+++ b/testing-report.yml
@@ -24,9 +24,21 @@
   status: pass
 
 - summary: |
-    Проверка регулирования времени при создании игры
+    Проверка максимального тайминга игры
   status: pass
-  
+
+- summary: |
+    Проверка минимального тайминга игры
+  status: pass
+
+- summary: |
+    Проверка выбора минимального уровня сложности игры
+  status: pass
+
+- summary: |
+    Проверка выбора максимального уровня сложности игры
+  status: pass  
+
 - summary: |
     Проверка возможности выбора категории задания
   status: pass
