--- a/requirements.yml
+++ b/requirements.yml
@@ -4,9 +4,14 @@ functional:
   - Пользователь должен иметь возможность создавать игру
   - Пользователь должен иметь возможность выбрать подходящий ему уровень
   - Пользователь должен иметь возможность выбрать тип игры (с ботом, с другом, с другими пользователями)
-  - Пользователь должен иметь возможность выбрать время игры
+  - Пользователь должен иметь возможность выбрать время игры (максимальное и минимальное время)
   - Пользователь должен иметь возможность выбрать категорию задания
   - Пользователь должен иметь возможность проверить свой код (верно написаный код и неверно написанный код)
+  - Пользователь должен видеть два редактора, слева - свой редактор, справа - соперника
+  - Пользователь должен видеть код своего соперника в режиме он-лайн
+  - Пользователь должен имеет кнопку "check" для проверки своего решения
+  - Пользователь должен видеть модальное окно, где написано, кто является победителем этой игры 
+  - Пользователь должен иметь возможность выйти из игры по нажатию кнопки "exit", которая у него появилась
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
