--- a/requirements.yml
+++ b/requirements.yml
@@ -7,10 +7,9 @@ functional:
   - Пользователь должен иметь возможность выбрать время игры (максимальное и минимальное время)
   - Пользователь должен иметь возможность выбрать категорию задания
   - Пользователь должен иметь возможность проверить свой код (верно написаный код и неверно написанный код)
-  - Пользователь должен видеть код своего соперника в режиме он-лайн
-  - Пользователь должен имеет кнопку "check" для проверки своего решения
+  - Пользователь должен иметь кнопку "check" для проверки своего решения
   - Пользователь должен видеть модальное окно, где написано, кто является победителем этой игры 
-  - Пользователь должен иметь возможность выйти из игры по нажатию кнопки "exit", которая у него появилась
+  - Пользователь должен иметь возможность выйти из игры по нажатию кнопки "back to home"
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
