--- a/test-cases.yml
+++ b/test-cases.yml
@@ -104,19 +104,66 @@
     Пользователь имеет возможность выбрать себе в соперники бота
 
 - summary: |
-    Проверка регулирования времени при создании игры
+    Проверка создания игры с максимальным таймингом игры
   requirement: |
-    Пользователь должен иметь возможность выбрать время игры
+    Пользователь может настроить игру по времени максимум 60 минут
   prerequisites: |
-    Пользователь находится на главной странице сайта: https://codebattle.hexlet.io/
     Пользователь авторизован
+    Выбран минимальный уровень сложности 
+    Выбран формат игры "With a bot"
   test-data: |
-    no data
+    Time = 60 min
   steps:
-    - Нажимаем кнопку "Create a game"
-    - В модальном окне в поле "Контроль времени" тянем бегунок и выставляем подходящее вренмя для прохождения игры
+    - Нажать "Create battle"
   expected-result: |
-    Пользователь имеет возможность выбрать подходящее ему время для решения задачи в игре
+    Пользователь имеет возможность выбрать максимальное время (60 минут) для решения задачи в игре
+
+- summary: |
+      Проверка создания игры с минимальным таймингом игры
+    requirement: |
+      Пользователь может настроить игру по времени минимум 3 минуты
+    prerequisites: 
+      Пользователь авторизован
+      Выбран минимальный уровень сложности 
+      Выбран формат игры "With a bot"
+    test-data: |
+      Time = 3 min. 
+    steps:
+      - Нажать "Create battle"
+    expected-result: |
+      Пользователь имеет возможность выбрать минимальное время (3 минуты) для решения задачи в игре
+
+- summary: |
+      Проверка выбора максимального уровня сложности игры
+    requirement: |
+      Пользователь может выбрать мааксимальный уровень сложности игры
+    prerequisites: 
+      Пользователь авторизован 
+    test-data: |
+      Уровень сложности = 4
+    steps:
+      - Нажать "Create game" 
+      - Нажать "Четыре звезды"
+      - Нажать "With a bot"
+      - Нажать "Create battle" 
+    expected-result: |
+      Игра запустилась на максимальном уровне сложности       
+
+- summary: |
+      Проверка выбора минимального уровня сложности игры
+    requirement: |
+      Пользователь может выбрать минимальный уровень сложности игры
+    prerequisites: 
+      Пользователь авторизован 
+    test-data: |
+      Уровень сложности = 1
+    steps:
+      - Нажать "Create game" 
+      - Нажать "Одна звезда"
+      - Нажать "With a bot"
+      - Нажать "Create battle" 
+    expected-result: |
+      Игра запустилась на минимальном уровне сложности 
 
 - summary: |
     Проверка возможности выбора категории задания
@@ -250,3 +297,48 @@
     - Нажать "Sign in with GitHub"
   expected-result: |
     Сайт открывается корректно, наполнение страницы отображается корректно для пользователя сайта
+
+- summary: |
+    Проверка кнопки "check"
+  requirement: |
+    Пользователь должен иметь кнопку "check" для проверки своего решения
+  prerequisites: |
+    Пользователь авторизован
+    Пользователь находится на странице игры: https://codebattle.hexlet.io/games/142449
+  test-data: |
+    Игрок в "битве"
+  steps:
+    - Пишем решение
+    - Кликаем кнопку "check"
+  expected-result: |
+    Пользователь должен иметь возможность проверить свое решение с помощью кнопки "check"
+
+- summary: |
+    Проверка появления модального окна с пользователем-победителем
+  requirement: |
+    Пользователь должен видеть модальное окно, где написано, кто является победителем этой игры 
+  prerequisites: |
+    Пользователь авторизован
+    Пользователь находится на странице игры: https://codebattle.hexlet.io/games/142449
+  test-data: |
+    Игрок в "битве" 
+  steps:
+    - Пишем решение
+    - Кликаем кнопку "check"
+  expected-result: |
+    Пользователь должен видеть модальное окно с победителем в битве
+
+- summary: |
+    Проверка кнопки "back to home"
+  requirement: |
+    Пользователь должен иметь возможность выйти из игры по нажатию кнопки "back to home"
+  prerequisites: |
+    Пользователь авторизован
+    Пользователь находится на странице игры: https://codebattle.hexlet.io/games/142449
+  test-data: |
+    Игрок в "битве" 
+  steps:
+    - Кликаем кнопку "back to home"
+  expected-result: |
+    Пользователь может выйти из игры нажав на кнопку "back to home"
+
